# meow-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  meow_vectors.db
src/: ai.rs  ai_decider.rs  embedding.rs  engine.rs  indexer.rs  main.rs  search.rs  shell.rs  similarity.rs  types.rs  vector_db.rs
