[package]
name = "meow-cli"
version = "0.1.0"
edition = "2024"

# This makes the installed binary name just `meow`
[[bin]]
name = "meow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rustyline = "17.0.2"
reqwest = {version = "0.12.25", features= ["blocking", "json", "rustls-tls"]}
serde = "1.0.228"
serde_json = "1.0.145"
chrono = "0.4.42"
dirs = "6.0.0"
